--- a/crocodl/image/web/static/html/style_transfer/index.html
+++ b/crocodl/image/web/static/html/style_transfer/index.html
@@ -42,6 +42,7 @@
              </label>
              <input type="button" class="button-primary" id="restyle_button" value="Start restyling"/>
              <input type="button" class="" id="cancel_button" value="Cancel restyling"/>
+             <a href="view_code" target="_blank">View Code</a>
          </div>
          <div class="row">
             <progress id="restyle_progress" min="0" max="100" value="0" style="display:none;">0% complete
