--- a/crocodl/image/web/static/html/train_classifier/index.html
+++ b/crocodl/image/web/static/html/train_classifier/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <script type="text/javascript" src="js/runtime.js"></script>
-    <script type="text/javascript" src="js/train_runtime.js"></script>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <script type="text/javascript" src="/js/runtime.js"></script>
+    <script type="text/javascript" src="/js/train_runtime.js"></script>
 </head>
 
 <body onload="boot_runtime()">
