--- a/crocodl/image/web/static/html/index.html
+++ b/crocodl/image/web/static/html/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
+    <div class="container">
     <h1>Options</h1>
-    <a href="style_transfer/index.html">Style Transfer</a>
+    <ul>
+        <li><a href="style_transfer/index.html">Image Style Transfer</a></li>
+        <li><a href="search/index.html">Image Search</a></li>
+        <li><a href="train_classifier/index.html">Train Image Classifier</a></li>
+        <li><a href="score_classifier/index.html">Score Image Classifier</a></li>
+    </ul>
+    </div>
 </body>
 </html>
