Refactor for out of process execution

--- a/crocodl/image/web/static/html/index.html
+++ b/crocodl/image/web/static/html/index.html
@@ -12,8 +12,8 @@
     <ul>
         <li><a href="style_transfer/index.html">Image Style Transfer</a></li>
         <li><a href="search/index.html">Image Search</a></li>
-        <li><a href="train_classifier/index.html">Train Image Classifier</a></li>
-        <li><a href="score_classifier/index.html">Score Image Classifier</a></li>
+        <li><a href="train_classifier/index.html">Train Image Classifier/Anomaly Model</a></li>
+        <li><a href="score_classifier/index.html">Score Image Classifier/Anomaly Model</a></li>
     </ul>
     </div>
 </body>
