More refactoring.  Some features broken.

--- a/crocodl/image/web/static/html/index.html
+++ b/crocodl/image/web/static/html/index.html
@@ -10,10 +10,15 @@
     <div class="container">
     <h1>Options</h1>
     <ul>
-        <li><a href="style_transfer/index.html">Image Style Transfer</a></li>
+        <li><a href="train_classifier/index.html">Train Image Classifier</a></li>
+        <li><a href="score_classifier/index.html">Score Image Classifier</a></li>
+        <p/>
         <li><a href="search/index.html">Image Search</a></li>
-        <li><a href="train_classifier/index.html">Train Image Classifier/Anomaly Model</a></li>
-        <li><a href="score_classifier/index.html">Score Image Classifier/Anomaly Model</a></li>
+        <p/>
+        <li><a href="style_transfer/index.html">Image Style Transfer</a></li>
+        <p/>
+        <li><a href="train_autoencoder/index.html">Train Anomaly Model</a></li>
+        <li><a href="score_autoencoder/index.html">Score Anomaly Model</a></li>
     </ul>
     </div>
 </body>
