Refactoring.  Run image search tasks in sub processes.

--- a/crocodl/image/web/static/html/search/index.html
+++ b/crocodl/image/web/static/html/search/index.html
@@ -64,15 +64,16 @@
             <div class="one-half column">
                 <progress id="upload_images_progress" min="0" max="100" value="0" style="display:none;">0% complete
                 </progress>
-                <div id="train_monitor">
-                    <img style="display:block;object-fit:scale-down;width:160px;height:160px;" id="train_image"/>
-                    <div id="train_file_name">
+                <div id="load_monitor">
+                    <img style="display:block;object-fit:scale-down;width:160px;height:160px;" id="load_image"/>
+                    <div id="load_file_name">
                     </div>
                 </div>
             </div>
+            <a href="view_code" target="_blank">View Code</a>
         </div>
         <div class="row">
-            <div id="train_info"></div>
+            <div id="load_info"></div>
         </div>
     </fieldset>
 
@@ -102,6 +103,7 @@
                     </tbody>
                 </table>
             </div>
+            <a href="view_code" target="_blank">View Code</a>
         </div>
         <div class="row">
             <div id="search_info"></div>
