Add training report

--- a/crocodl/image/web/static/html/score_autoencoder/index.html
+++ b/crocodl/image/web/static/html/score_autoencoder/index.html
@@ -8,9 +8,9 @@
     <script type="text/javascript" src="/js/score_runtime.js"></script>
 </head>
 
-<body onload="boot_score_runtime(false)">
+<body onload="boot_score_runtime(false);">
 <div class="container">
-    <h1>Classify an Image</h1>
+    <h1>Score an Image with an Anomaly Model</h1>
 
     <fieldset>
         <legend>Model Settings</legend>
@@ -30,7 +30,7 @@
     </fieldset>
 
     <fieldset>
-        <legend>Image</legend>
+        <legend>Get Anomaly Score for Image</legend>
         <div class="row">
             <div class="one-half column">
                 <label for="upload_image_file">Choose Image File</label>
