--- a/crocodl/image/web/static/html/search/index.html
+++ b/crocodl/image/web/static/html/search/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/js/search_runtime.js"></script>
 </head>
 
-<body onload="boot_runtime()">
+<body onload="boot_search_runtime()">
 <div class="container">
     <h1>Search for Similar Images</h1>
 
